--- a/package.json
+++ b/package.json
@@ -6,9 +6,17 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.5.1",
+    "firebase": "^10.5.0",
+    "papaparse": "^5.4.1",
+    "plotly.js": "^2.27.0",
     "react": "^18.2.0",
+    "react-d3-speedometer": "^1.1.0",
     "react-dom": "^18.2.0",
+    "react-plotly.js": "^2.6.0",
     "react-scripts": "5.0.1",
+    "react-thermometer-component": "^1.0.1",
+    "recharts": "^2.9.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
